--- a/CppGen/CppGen/Properties/launchSettings.json
+++ b/CppGen/CppGen/Properties/launchSettings.json
@@ -10,7 +10,10 @@
       //"commandLineArgs": "C:\\Dev\\Mine-imator\\GmProject C:\\Dev\\Mine-imator\\CppProject\\Generated C:\\Dev\\Mine-imator\\CppProject\\Asset\\Sprites C:\\Dev\\Mine-imator\\CppProject\\Asset\\Shaders C:\\Dev\\Mine-imator\\CppGen\\gml.json"
 
       // mbanders
-      "commandLineArgs": "D:\\Documents\\GameMakerStudio2\\Mine-imator-2.0.2-Continuation-Build\\GmProject D:\\Documents\\GameMakerStudio2\\Mine-imator-2.0.2-Continuation-Build\\CppProject\\Generated D:\\Documents\\GameMakerStudio2\\Mine-imator-2.0.2-Continuation-Build\\CppProject\\Asset\\Sprites D:\\Documents\\GameMakerStudio2\\Mine-imator-2.0.2-Continuation-Build\\CppProject\\Asset\\Shaders D:\\Documents\\GameMakerStudio2\\Mine-imator-2.0.2-Continuation-Build\\CppGen\\gml.json"
+      //"commandLineArgs": "G:\\Mine-imator-2.0.2-Continuation-Build-master2\\Mine-imator-2.0.2-Continuation-Build-master\\GmProject G:\\Mine-imator-2.0.2-Continuation-Build-master2\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Generated G:\\Mine-imator-2.0.2-Continuation-Build-master2\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Asset\\Sprites G:\\Mine-imator-2.0.2-Continuation-Build-master2\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Asset\\Shaders G:\\Mine-imator-2.0.2-Continuation-Build-master2\\Mine-imator-2.0.2-Continuation-Build-master\\CppGen\\gml.json"
+      
+	  //YogaindoCR
+	  "commandLineArgs": "G:\\Mine-imator-2.0.2-Continuation-Build-master\\Mine-imator-2.0.2-Continuation-Build-master\\GmProject G:\\Mine-imator-2.0.2-Continuation-Build-master\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Generated G:\\Mine-imator-2.0.2-Continuation-Build-master\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Asset\\Sprites G:\\Mine-imator-2.0.2-Continuation-Build-master\\Mine-imator-2.0.2-Continuation-Build-master\\CppProject\\Asset\\Shaders G:\\Mine-imator-2.0.2-Continuation-Build-master\\Mine-imator-2.0.2-Continuation-Build-master\\CppGen\\gml.json"
     }
   }
 }
